[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tap-framework"
version = "0.2.1"
description = "Framework for building Singer.io taps"
authors = [
    {name = "dbt Labs", email = "info@getdbt.com"},
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "singer-python>=5.1.0,<5.14",
    "backoff>=1.3.2,<=1.8.0",
    "requests>=2.18.4,<3.0",
    "requests-oauthlib>=0.8.0,<1.4",
    "funcy>=1.10.1,<1.19",
]

[project.urls]
Homepage = "https://getdbt.com"

[tool.setuptools]
packages = ["tap_framework"]
py-modules = ["tap_framework"]
